building references with bibtex

--- a/References.bib
+++ b/References.bib
@@ -7,6 +7,15 @@
     URL = {https://cs.stackexchange.com/q/37971}
 }
 
+@MISC {37962,
+    TITLE = {Why is the optimal cut-off for switching from Quicksort to Insertion sort machine dependent?},
+    AUTHOR = {David Richerby (https://cs.stackexchange.com/users/9550/david-richerby)},
+    HOWPUBLISHED = {Computer Science Stack Exchange},
+    NOTE = {URL:https://cs.stackexchange.com/q/37962 (version: 2015-02-04)},
+    EPRINT = {https://cs.stackexchange.com/q/37962},
+    URL = {https://cs.stackexchange.com/q/37962}
+}
+
 @book{cormen01introduction,
   added-at = {2009-02-18T15:27:17.000+0100},
   asin = {0262032937},
