changed bib file name

--- a/references.tex
+++ b/references.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
 \usepackage{biblatex}
-\bibliography{References}
+\bibliography{references}
 
 \begin{document}
-\autocite{cormen01introduction}
+\notice{*}
 \printbibliography
 \end{document}
