added references and citations

--- a/References.bib
+++ b/References.bib
@@ -36,4 +36,12 @@
   year = 2001
 }
 
+@book{10.5555/318199,
+author = {Bentley, Jon},
+title = {Programming Pearls (2nd Ed.)},
+year = {1999},
+isbn = {0201657880},
+publisher = {ACM Press/Addison-Wesley Publishing Co.},
+address = {USA}
+}
 
