--- a/references.tex
+++ b/references.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
-\usepackage{biblatex}
-\bibliography{references}
 
 \begin{document}
-\notice{*}
-\printbibliography
+\nocite{*}
+
+\bibliography{references}
+\bibliographystyle{plain}
 \end{document}
